# VulkanApp

./: CMakeLists.txt  setup.sh
ext/: CMakeLists.txt
shaders/: simple.slang
src/: CMakeLists.txt  Components.h  main.cpp
src/Application/: Application.cpp  Application.h  ApplicationContext.h
src/Camera/: CameraComponent.h  CameraSystem.cpp  CameraSystem.h  CameraUtils.cpp  CameraUtils.h
src/Core/: Events.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Manager.h  MatVec.h  Mouse.h  MouseContext.h  System.h  WindowManager.cpp  WindowManager.h
src/ECS/: AABBComponent.h  AABBSystem.cpp  AABBSystem.h  AABBUtils.cpp  AABBUtils.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  GeometryAccessComponents.h  GeometryPositionsComponent.h  RenderComponents.h  TransformComponent.h  TransformSystem.cpp  TransformSystem.h  TransformUtils.cpp  TransformUtils.h
src/Plugins/: IPlugin.h
src/Rendering/: CMakeLists.txt  RendererSystem.cpp  RendererSystem.h  ShaderData.cpp  ShaderData.h  ShaderManager.cpp  ShaderManager.h  VulkanContext.cpp  VulkanContext.h  VulkanUtils.cpp  VulkanUtils.h  VulkanWrappers.cpp  VulkanWrappers.h
src/Scene/: SceneManager.cpp  SceneManager.h
src/UI/: CMakeLists.txt  UICameraComponent.h  UIManager.cpp  UIManager.h  UiCameraComponent.cpp
